# ocaml-flamegraphs

./: .gitignore  LICENSE  README.md  dune-project  flamegraphs.opam
.github/workflows/: ci.yml
lib/: color.ml  dune  files.ml  flamegraph.css  flamegraph.js  flamegraph.ml  flamegraph.mli  flamegraphs.ml  flamegraphs.mli  folded.ml  folded.mli  svg.ml  svg.mli  svg_code.ml
test/: dune  gen_svg.ml  test_flamegraph.svg.expected  test_flamegraphs.ml
